# ChangeLog for net-mail/gnubiff
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/gnubiff/ChangeLog,v 1.35 2011/11/25 23:46:35 hwoarang Exp $

  25 Nov 2011; Markos Chandras <hwoarang@gentoo.org> gnubiff-2.2.13-r2.ebuild:
  Stable on amd64 wrt bug #391209

  22 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gnubiff-2.2.13-r2.ebuild:
  x86 stable wrt bug #391209

*gnubiff-2.2.13-r2 (04 Jun 2011)

  04 Jun 2011; Eray Aslan <eras@gentoo.org> +gnubiff-2.2.13-r2.ebuild,
  +files/gnubiff-2.2.13-gold.patch:
  Fix linking with gold - bug #369563. EAPI bump

  23 Mar 2011; Tim Harder <radhermit@gentoo.org> gnubiff-2.2.13-r1.ebuild:
  Use slot dependency for gtk+.

  08 Dec 2010; Pacho Ramos <pacho@gentoo.org> gnubiff-2.2.13-r1.ebuild:
  Needs gnome-panel with bonobo support (with Tim Harder permission, bug
  #348179).

  24 Oct 2010; Tim Harder <radhermit@gentoo.org> -gnubiff-2.2.10.ebuild,
  -files/gnubiff-2.2.10-gcc43.patch:
  Remove old.

  23 Oct 2010; Raúl Porcel <armin76@gentoo.org> gnubiff-2.2.13-r1.ebuild:
  alpha/ia64 stable wrt #339284

  05 Oct 2010; Markus Meier <maekke@gentoo.org> gnubiff-2.2.13-r1.ebuild:
  x86 stable, bug #339284

  04 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  gnubiff-2.2.13-r1.ebuild:
  Stable on amd64 wrt bug #339284

*gnubiff-2.2.13-r1 (02 Oct 2010)

  02 Oct 2010; Tim Harder <radhermit@gentoo.org> -gnubiff-2.2.13.ebuild,
  +gnubiff-2.2.13-r1.ebuild, +files/gnubiff-2.2.13-fix-nls.patch:
  Revision bump and remove old. Fix compile errors when the nls USE flag is
  not enabled (fixes bug #339398) and add gnome-base/gnome-panel dependency
  for GNOME support.

*gnubiff-2.2.13 (29 Aug 2010)

  29 Aug 2010; Tim Harder <radhermit@gentoo.org> -gnubiff-2.2.11.ebuild,
  +gnubiff-2.2.13.ebuild:
  Version bump for bug #301196, thanks to Geert Vanhaute for reporting.
  Remove buggy version, closes bugs #272095 and #333809.

*gnubiff-2.2.11 (22 May 2009)
