@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/gnubiff/gnubiff-2.2.13-r2.ebuild,v 1.3 2011/11/25 23:46:35 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/gnubiff/gnubiff-2.2.13-r2.ebuild,v 1.4 2011/12/04 14:28:04 armin76 Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~ia64 x86"
+KEYWORDS="amd64 x86"
 IUSE="debug fam gnome nls password"
 
 RDEPEND=">=x11-libs/gtk+-2.6:2
