@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/gnubiff
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/gnubiff/ChangeLog,v 1.35 2011/11/25 23:46:35 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/gnubiff/ChangeLog,v 1.36 2011/12/04 14:28:04 armin76 Exp $
+
+  04 Dec 2011; Raúl Porcel <armin76@gentoo.org> gnubiff-2.2.13-r1.ebuild,
+  gnubiff-2.2.13-r2.ebuild:
+  Drop alpha/ia64 keywords
 
   25 Nov 2011; Markos Chandras <hwoarang@gentoo.org> gnubiff-2.2.13-r2.ebuild:
   Stable on amd64 wrt bug #391209
